Fixing bug 19285 - Unreadable 'no internet connection' error message in start-up add-on compat check. r=Mook. a=Designer Steve.
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17649 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -1383,6 +1383,11 @@ domi-panelset label.viewer-title {
   color: black !important;
 }
 
+#updateCheckErrorNotFound {
+  background-color: transparent;
+  border: none;
+}
+
 /*******************************************************************************
 * MEDIA IMPORT DIALOG
 *******************************************************************************/
